--- a/webapp/templates/analysis/index.html
+++ b/webapp/templates/analysis/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress BadExpressionStatementJS -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -45,14 +46,70 @@
             Analysis
         </h1>
 
-        <h2 class="title is-5">
-            Text:
-        </h2>
-        <p>
-            {{ text }}
-        </p>
+        <div class="columns">
+            <div class="column">
+                <h2 class="title is-5">Text:</h2>
+                <p> {{ text }}</p>
+
+                {% if bad_words %}
+                <hr>
+
+                <h2 class="title is-5">Hate words:</h2>
+                <p> {{ bad_words }}</p>
+                {% endif %}
+
+            </div>
+            <div class="column">
+                <canvas id="myChart" width="100%" height="80px"></canvas>
+            </div>
+
+        </div>
     </div>
 </section>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+<script>
+    //noinspection UnterminatedStatementJS
+    document.addEventListener("DOMContentLoaded", function (event) {
+        var data = JSON.parse("{{analysis}}");
+
+        var keys_analysis = JSON.parse("{{keys_analysis}}".replace(/'/g, '"'));
+
+        var ctx = document.getElementById("myChart");
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: keys_analysis,
+                datasets: [{
+                    label: 'value',
+                    data: data,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255,99,132,1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    });
+
+</script>
 </body>
 </html>
