--- a/webapp/templates/analysis/index.html
+++ b/webapp/templates/analysis/index.html
@@ -1,115 +1,79 @@
-<!DOCTYPE html>
-<!--suppress BadExpressionStatementJS -->
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Analysis</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.2.3/css/bulma.min.css"/>
-</head>
-<body>
-<header class="nav">
-    <div class="container">
-        <div class="nav-left">
-            <a class="nav-item">
-                HackHate
-                <!--<img src="images/bulma-type-white.png" alt="Logo">-->
-            </a>
-        </div>
-        <span class="nav-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-        <div class="nav-right nav-menu">
-            <a class="nav-item is-active">
-                Home
-            </a>
-            <a class="nav-item" href="#">
-                API
-            </a>
-            <span class="nav-item">
-            <a class="button is-info is-inverted">
-              <span class="icon">
-                <i class="fa fa-github"></i>
-              </span>
-              <span>Source Code</span>
-            </a>
-          </span>
-        </div>
-    </div>
-</header>
+{% extends "base.html" %}
+{% block body %}
+    <section class="section">
+        <div class="container">
+            <h1 class="title has-text-centered">
+                Analysis
+            </h1>
 
-<section class="section">
-    <div class="container">
-        <h1 class="title">
-            Analysis
-        </h1>
+            <div class="columns">
+                <div class="column">
+                    <h2 class="title is-5">Text:</h2>
+                    <p> {{ text }}</p>
 
-        <div class="columns">
-            <div class="column">
-                <h2 class="title is-5">Text:</h2>
-                <p> {{ text }}</p>
+                    {% if bad_words %}
+                        <hr>
 
-                {% if bad_words %}
-                <hr>
+                        <h2 class="title is-5">Hate words:</h2>
+                        <p> {{ bad_words }}</p>
+                    {% endif %}
 
-                <h2 class="title is-5">Hate words:</h2>
-                <p> {{ bad_words }}</p>
-                {% endif %}
+                </div>
+                <div class="column">
+                    <h2 class="title is-5 has-text-centered">Sentiment Analysis</h2>
+
+                    <canvas id="myChart" width="100%" height="80px"></canvas>
+                </div>
 
             </div>
-            <div class="column">
-                <canvas id="myChart" width="100%" height="80px"></canvas>
-            </div>
-
         </div>
-    </div>
-</section>
+    </section>
+{% endblock %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
-<script>
-    //noinspection UnterminatedStatementJS
-    document.addEventListener("DOMContentLoaded", function (event) {
-        var data = JSON.parse("{{analysis}}");
 
-        var keys_analysis = JSON.parse("{{keys_analysis}}".replace(/'/g, '"'));
+{% block script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+    <script>
+        //noinspection UnterminatedStatementJS
+        document.addEventListener("DOMContentLoaded", function (event) {
+            var data = JSON.parse("{{analysis}}");
 
-        var ctx = document.getElementById("myChart");
-        var myChart = new Chart(ctx, {
-            type: 'horizontalBar',
-            data: {
-                labels: keys_analysis,
-                datasets: [{
-                    label: 'value',
-                    data: data,
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255,99,132,1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
+            var keys_analysis = JSON.parse("{{keys_analysis}}".replace(/'/g, '"'));
+
+            var ctx = document.getElementById("myChart");
+            var myChart = new Chart(ctx, {
+                type: 'horizontalBar',
+                data: {
+                    labels: keys_analysis,
+                    datasets: [{
+                        label: 'value',
+                        data: data,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255,99,132,1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)'
+                        ],
+                        borderWidth: 1
                     }]
+                },
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true
+                            }
+                        }]
+                    }
                 }
-            }
+            });
         });
-    });
 
-</script>
-</body>
-</html>
+    </script>
+{% endblock %}
