--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="nav-left">
             <a class="nav-item">
-                HackHate
+                <strong>HackHate</strong>
                 <!--<img src="images/bulma-type-white.png" alt="Logo">-->
             </a>
         </div>
