--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,7 +11,7 @@
 <header class="nav has-shadow">
     <div class="container">
         <div class="nav-left">
-            <a class="nav-item">
+            <a class="nav-item" href="/">
                 <strong>HackHate</strong>
                 <!--<img src="images/bulma-type-white.png" alt="Logo">-->
             </a>
