--- a/webapp/templates/analysis/search.html
+++ b/webapp/templates/analysis/search.html
@@ -7,27 +7,30 @@
                 Search Page
             </h1>
 
-            <div class="columns">
+            <div class="columns ">
+                <div class="column is-three-quarters">
+                    <input class="input" placeholder="Search query" type="text" id="query"/>
+                </div>
                 <div class="column">
-                    <input class="input" placeholder="Search query" type="text" id="query" />
+                    <button class="button is-primary" id="submit">Analyze Text</button>
+                    <button class="button is-primary" id="submitSocial">Analyze Social</button>
                 </div>
             </div>
-            <div class="column">
-                <button class="button is-primary" id="submit">Analyze Text</button>
-                <button class="button is-primary" id="submitSocial">Analyze Social</button>
-            </div>
+
         </div>
     </section>
 {% endblock %}
 
 {% block script %}
     <script>
-        var BASE_URL = "http://localhost:8000/";
-        document.getElementById("submit").onclick = function(event) {
+        var BASE_URL = "{{ API_URL }}";
+
+        document.getElementById("submit").onclick = function (event) {
             query = document.getElementById("query").value;
             window.location = BASE_URL + "analysis?text=" + query;
         };
-        document.getElementById("submitSocial").onclick = function(event) {
+
+        document.getElementById("submitSocial").onclick = function (event) {
             query = document.getElementById("query").value;
             window.location = BASE_URL + "social_analysis?text=" + query;
         };
