--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -25,7 +25,7 @@
             <a class="nav-item is-active">
                 Home
             </a>
-            <a class="nav-item" href="/" target="_blank">
+            <a class="nav-item" href="/docs" target="_blank">
                 API
             </a>
         </div>
