--- a/webapp/templates/analysis/social_analysis.html
+++ b/webapp/templates/analysis/social_analysis.html
@@ -132,7 +132,7 @@
                 data: {
                     labels: keys_analysis,
                     datasets: [{
-                        label: 'value',
+                        label: 'Compound value',
                         data: data,
                         backgroundColor: [
                             'rgba(255, 99, 132, 0.2)',
