--- a/webapp/templates/analysis/search.html
+++ b/webapp/templates/analysis/search.html
@@ -9,7 +9,7 @@
 
             <div class="columns ">
                 <div class="column is-three-quarters">
-                    <input class="input" placeholder="Search query" type="text" id="query"/>
+                    <input autofocus="autofocus" class="input" placeholder="Search query" type="text" id="query"/>
                 </div>
                 <div class="column">
                     <button class="button is-primary" id="submit">Analyze Text</button>
