--- a/webapp/templates/analysis/social_analysis.html
+++ b/webapp/templates/analysis/social_analysis.html
@@ -30,7 +30,7 @@
                         <div style="margin-top: 20px"></div>
 
                         {% for tweet in twitter.tweets %}
-                            <div class="box">
+                            <div class="box" id="tweetBox{{ forloop.counter0 }}" onclick="addCredibility(this, '{{ tweet.message }}')">
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-64x64">
@@ -63,6 +63,14 @@
                                                 </ul>
                                             </div>
                                         </nav>
+                                        <nav>
+                                            <hr>
+
+                                            <ul style="list-style: none;" id="credibility-list">
+                                            </ul>
+                                        </nav>
+                                        <nav id="url-nav">
+                                        </nav>
                                     </div>
                                 </article>
                             </div>
@@ -75,7 +83,7 @@
                     <div class="column">
                         <h2 class="title is-5 has-text-centered">Facebook: {{ f_page.name }} </h2>
                         {% for post in facebook.posts %}
-                            <div class="box">
+                            <div class="box" id="facebookBox{{ forloop.counter0 }}" onclick="addCredibility(this, '{{ post.message }}')">
                                 <article class="media">
                                     <div class="media-content">
                                         <div class="content">
@@ -102,6 +110,14 @@
                                                     </li>
                                                 </ul>
                                             </div>
+                                        </nav>
+
+                                        <nav>
+                                            <hr>
+                                            <ul style="list-style: none;" id="credibility-list">
+                                            </ul>
+                                        </nav>
+                                        <nav id="url-nav">
                                         </nav>
                                     </div>
                                 </article>
@@ -161,6 +177,24 @@
                 }
             });
         });
+
+    function addCredibility(elem, message) {
+        var BASE_URL = "http://localhost:8000/"
+        //# $.ajax({
+        //#     url: BASE_URL + "api/search_score?search=" + message
+        //# }).done(function(data) {
+        //#     alert(data['scores']);
+        //#     $(elem).append(data);
+        //# })
+        //$(elem).find("credibility-list").toggle();
+
+        $.get("api/search_score?search=" + message, function( data ) {
+            for (cred in data.scores) {
+                $(elem).find("#credibility-list").append("<li style='display: inline; padding : 0 0.5em'>" + cred + ": " + data.scores[cred] + "</li>");
+            }
+            $(elem).find("#url-nav").append('<a href="' + data.search_link +'"></a>');
+        });
+    }
 
     </script>
 {% endblock %}
