--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -51,6 +51,8 @@
     </div>
 </footer>
 
+<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+
 {% block script %}{% endblock %}
 
 </body>
