--- a/webapp/templates/analysis/social_analysis.html
+++ b/webapp/templates/analysis/social_analysis.html
@@ -30,7 +30,9 @@
                         <div style="margin-top: 20px"></div>
 
                         {% for tweet in twitter.tweets %}
-                            <div class="box" id="tweetBox{{ forloop.counter0 }}" onclick="addCredibility(this, '{{ tweet.message }}')">
+                            {% autoescape on %}
+                                <div class="box" id="tweetBox{{ forloop.counter0 }}" onclick='addCredibility(this, "{{ tweet.message|escapejs }}")'>
+                            {% endautoescape %}
                                 <article class="media">
                                     <div class="media-left">
                                         <figure class="image is-64x64">
@@ -179,21 +181,15 @@
         });
 
     function addCredibility(elem, message) {
-        var BASE_URL = "http://localhost:8000/"
-        //# $.ajax({
-        //#     url: BASE_URL + "api/search_score?search=" + message
-        //# }).done(function(data) {
-        //#     alert(data['scores']);
-        //#     $(elem).append(data);
-        //# })
-        //$(elem).find("credibility-list").toggle();
-
-        $.get("api/search_score?search=" + message, function( data ) {
-            for (cred in data.scores) {
-                $(elem).find("#credibility-list").append("<li style='display: inline; padding : 0 0.5em'>" + cred + ": " + data.scores[cred] + "</li>");
-            }
-            $(elem).find("#url-nav").append('<a href="' + data.search_link +'"></a>');
-        });
+        if ($(elem).find("#credibility-list").find("li").length == 0) {
+            $.get("api/search_score?search=" + message, function( data ) {
+                for (cred in data.scores) {
+                    $(elem).find("#credibility-list").append("<li style='display: inline; padding : 0 0.5em'>" + cred + ": " + data.scores[cred] + "</li>");
+                }
+                $(elem).find("#url-nav").append('<a style="padding: 0 0.5em" href="' + data.search_link + '">See Research</a>');
+            });
+        } else {
+        }
     }
 
     </script>
