--- a/webapp/templates/analysis/text_analysis.html
+++ b/webapp/templates/analysis/text_analysis.html
@@ -10,9 +10,46 @@
             </h1>
 
             <div class="columns">
-                <div class="column">
+                <div class="column is-half">
+                    <h2 class="title is-5 has-text-centered">Sentiment Analysis</h2>
+
+                    <canvas id="myChart" width="100%" height="80px"></canvas>
+
+                    <hr style="margin: 10px 0">
+
+                    <h2 class="title is-5">Credibility</h2>
+                    <div class="box" style="margin-top: 20px;">
+                        <article class="media">
+                            <nav class="level">
+                                <div class="level-left">
+                                    <ul style="list-style: none">
+                                        <li class="sentiment" style="display: inline; padding : 0 0.5em">
+                                            <strong style="color: orange">Clickbait</strong>: {{ credibility.CLICKBAIT }}
+                                        </li>
+                                        <li style="display: inline; padding : 0 0.5em">
+                                            <strong style="color: blue">Hoax</strong>: {{ credibility.HOAX }}
+                                        </li>
+                                        <li style="display: inline; padding : 0 0.5em">
+                                            <strong style="color: red">Satire</strong>: {{ credibility.SATIRE }}
+                                        </li>
+                                        <li style="display: inline; padding : 0 0.5em">
+                                            <strong style="color: green">Serious</strong>: {{ credibility.SERIOUS }}
+                                        </li>
+                                    </ul>
+                                </div>
+                            </nav>
+                        </article>
+                        <div style="overflow: hidden; white-space: nowrap;  text-overflow: ellipsis;">
+                            <a href="{{ duckduck_url }}">
+                                {{ duckduck_url }}
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="column is-half">
                     <h2 class="title is-5">Text:</h2>
-                    <p style="text-align: justify"> {{ text }}</p>
+                    <p style="text-align: justify; max-width: 800px"> {{ text }}</p>
 
                     {% if bad_words %}
                         <hr>
@@ -39,38 +76,9 @@
                         </table>
                     {% endif %}
 
-                    <hr>
 
-                    <h2 class="title is-5">Credibility</h2>
-                    <div class="box" style="margin-top: 20px;">
-                        <article class="media">
-                            <nav class="level">
-                                <div class="level-left">
-                                    <ul style="list-style: none">
-                                        <li class="sentiment" style="display: inline; padding : 0 0.5em">
-                                            <strong style="color: orange">Clickbait</strong>: {{ credibility.CLICKBAIT }}
-                                        </li>
-                                        <li style="display: inline; padding : 0 0.5em">
-                                            <strong style="color: blue">Hoax</strong>: {{ credibility.HOAX }}
-                                        </li>
-                                        <li style="display: inline; padding : 0 0.5em">
-                                            <strong style="color: red">Satire</strong>: {{ credibility.SATIRE }}
-                                        </li>
-                                        <li style="display: inline; padding : 0 0.5em">
-                                            <strong style="color: green">Serious</strong>: {{ credibility.SERIOUS }}
-                                        </li>
-                                    </ul>
-                                </div>
-                            </nav>
-                        </article>
-                        <a href="{{ duckduck_url }}">{{ duckduck_url }}</a>
-                    </div>
                 </div>
-                <div class="column">
-                    <h2 class="title is-5 has-text-centered">Sentiment Analysis</h2>
 
-                    <canvas id="myChart" width="100%" height="80px"></canvas>
-                </div>
             </div>
         </div>
     </section>
