improve text analysis template

--- a/webapp/templates/analysis/text_analysis.html
+++ b/webapp/templates/analysis/text_analysis.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="column is-half">
-                    <h2 class="title is-5">Text:</h2>
+                    <h2 class="title is-5 has-text-centered">Text</h2>
                     <p style="text-align: justify; max-width: 800px"> {{ text }}</p>
 
                 </div>
