--- a/webapp/templates/analysis/search.html
+++ b/webapp/templates/analysis/search.html
@@ -3,7 +3,7 @@
 {% block body %}
     <section class="section">
         <div class="container">
-            <h1 class="title has-text-centered">
+            <h1 class="title is-2 has-text-centered">
                 Search Page
             </h1>
 
@@ -17,6 +17,34 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section class="section">
+        <h2 class="title is-4 has-text-centered"> Recent searchs</h2>
+        <div class="container">
+            <div class="columns is-multiline">
+                {% for search in searchs %}
+                    <div class="column is-one-third">
+                        <div class="card">
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-left">
+                                        <figure class="image is-64x64">
+                                            <img src="{{ search.picture_url }}" alt="Image">
+                                        </figure>
+                                    </div>
+                                    <div class="media-content">
+                                        <p class="title is-5">{{ search.search }}</p>
+                                        <a class="subtitle is-6" href="/social_analysis?text={{ search.search }}">
+                                            Search
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </section>
 {% endblock %}
